--- a/scss/blocks/_autopark-filter.scss
+++ b/scss/blocks/_autopark-filter.scss
@@ -138,6 +138,10 @@
         margin: 0 0 32px 0;
       }
     }
+
+    @media screen and (max-width: 900px) {
+      flex-direction: column;
+    }
   }
 
   & .select__header {
