--- a/css/style.css
+++ b/css/style.css
@@ -346,6 +346,18 @@ section {
   }
 }
 
+.select-current-input {
+  padding: 0;
+}
+
+.select-current-input input {
+  width: 100%;
+  height: 100%;
+  -webkit-border-radius: 8px !important;
+          border-radius: 8px !important;
+  padding: 16px 12px 16px 18px;
+}
+
 .select-icon {
   width: 9px;
   height: 9px;
@@ -527,6 +539,9 @@ section {
   display: inline-block;
   width: 24px;
   height: 24px;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
 }
 
 .info__messengers li a img {
@@ -534,9 +549,26 @@ section {
   height: 100%;
 }
 
+@media screen and (min-width: 768px) {
+  .info__messengers li a:hover {
+    -webkit-transform: translate(0, -2px);
+        -ms-transform: translate(0, -2px);
+            transform: translate(0, -2px);
+  }
+}
+
 .info-phone {
   font-size: 18px;
   font-weight: 600;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+@media screen and (min-width: 768px) {
+  .info-phone:hover {
+    color: var(--accent);
+  }
 }
 
 .info__callback {
