--- a/scss/blocks/_select.scss
+++ b/scss/blocks/_select.scss
@@ -37,6 +37,17 @@
   }
 }
 
+.select-current-input {
+  padding: 0;
+
+  & input {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px!important;
+    padding: 16px 12px 16px 18px;
+  }
+}
+
 .select-icon {
   width: 9px;
   height: 9px;
