--- a/scss/car.scss
+++ b/scss/car.scss
@@ -19,6 +19,7 @@ $transition: .2s;
 }
 
 .car__body {
+  position: relative;
   display: flex;
   justify-content: space-between;
 
@@ -205,29 +206,6 @@ $transition: .2s;
     font-size: 28px;
   }
 }
-
-// .car__rent__header {
-//   display: flex;
-//   align-items: center;
-//   justify-content: space-between;
-//   border-bottom: 1px solid $outline;
-//   margin: 16px 0 0 0;
-//   padding: 0 0 32px 0;
-  
-//   & span {
-//     font-size: 14px;
-//     color: $second;
-//   }
-
-//   @media screen and (max-width: 500px) {
-//     flex-direction: column;
-//     align-items: flex-start;
-
-//     & span:not(:last-child) {
-//       margin: 0 0 6px 0;
-//     }
-//   }
-// }
 
 .car__rent__header {
 
@@ -434,4 +412,26 @@ $transition: .2s;
 .modal-rent__info-text {
   font-size: 16px;
   margin: 8px 0 0 0;
+}
+
+.car-bg-img {
+  max-width: 825px;
+  width: 100%;
+  position: absolute;
+  left: 50%;
+  top: -180px;
+  transform: translate(-50%,0);
+  z-index: -1;
+
+  & img {
+    width: 100%;
+  }
+
+  @media screen and (max-width: 1020px) {
+    top: -100px;
+  }
+
+  @media screen and (max-width: 700px) {
+    display: none;
+  }
 }
